Facades/js/openui5.template.css
/* ... */
.exf-launcher {position: relative; height: 100%; width: 100%;}

/* sap.m.Input */
/* fix for suggest-table being hidden the first time the phone-suggest-dialog opens 
- regardless of being empty or not */
.sapMDialog.sapMSuggestionsPopover .sapMInputSuggestionTableHidden {display: block !important}
/* make disabled inputs a little more vibrant */
.sapMInputBaseDisabledWrapper>.sapMInputBaseInner {color: black;}

/* RangeSpinnerFilter */
.exf-spinner-filter > div {margin-right: 0 !important}
.exf-spinner-filter .sapMBtnInner {border: .0625rem solid #89919a}
.exf-spinner-filter > div:first-of-type button {margin-right: -3px}
.exf-spinner-filter > div:last-of-type button {margin-left: -3px;}
.exf-spinner-filter > div:last-of-type {overflow: hidden}

/* sap.m.Table */
.sapMList.sapMListBGTranslucent.sapMListTblCnt {overflow-x: scroll}
.sapMTB-Info-CTX .sapMBtnTransparent>.sapMBtnIcon {color: #fff}
/* Fix for too narrow progress bars in mobile sap.m.Table */
.sapMListTblSubCntValInline > .sapMPI {min-width: 150px}
/* Fix missing border on navigatable sap.m.GroupHeaderListItem */
.sapMGHLICell + .sapMListTblNavCol { border-top: 2px solid #ccc !important; }
/* Fix misaligned text on smartphones if table inside an editable form */
.sapUiFormEdit .sapMListTblSubCnt .sapMText {min-height: inherit; padding-bottom: inherit; line-height: inherit;}
.sapUiFormEdit .sapMListTblCell .sapMText {min-height: inherit; padding-bottom: inherit; line-height: inherit; padding-top: inherit; } 
/* Fix to stretch InputSelect buttons to full width in mobile sap.m.Table */
.sapMListTblSubCntRow > .sapMListTblSubCntVal {width: 100%}
/* Move all values in mobile sap.m.Table to the left for better readability */
.sapMListTblSubCntRow > .sapMListTblSubCntVal span {text-align: start !important}


/* Panels */
.exf-panel-no-border > .sapMPanelContent {border-bottom: none;}

/* sap.m.List */
.sapMLIB.sapMSLIIcon {padding-left: 0;}

/* sap.m.GridList */
.sapFGridListDefault {padding: 0 0.5rem}
.sapFGridListDefault > .sapMLIB {max-width: 11rem;}

/* sap.f.DynamicPage */
.exf-page-heading-btn {margin-right: 0.2rem;}
.exf-page-heading-btn > span {height:1.25rem !important; margin-top: -0.063rem !important}
.exf-page-heading-btn > span > span {height:1.25rem !important; margin-top: -0.5rem !important}
.sapUiSizeCompact .exf-page-heading-btn > span {height:1.25rem !important; margin-top: 0rem !important}
.sapUiSizeCompact .exf-page-heading-btn > span > span {height:1.25rem !important;  margin-top: -0.188rem !important}
body:not(.sapUiSizeCompact) .sapFDynamicPageTitleMainHeadingInner .sapMTitle > span {line-height: 2.375rem}
/* Fix page header collaps button icon shifted to the right */
.sapUiSizeCompact .sapFDynamicPageToggleHeaderIndicator > .sapMBtnInner {padding-left: 0.2rem !important; padding-right: 0.2rem !important;}
/* noscroll for Scheduler and other widgets with internal scrolling */
.sapFDynamicPage.noscroll .sapMScrollBarOuterDiv {display: none;}
.sapFDynamicPage.noscroll .sapFDynamicPageContentWrapper {overflow: hidden!important;}

.sapFDynamicPage-Std-Phone .sapFDynamicPageTitleWrapper.sapFDynamicPageTitleSnapped>.sapFDynamicPageTitle {padding-bottom: 1.2rem;}
.sapFDynamicPage-Std-Phone .sapFDynamicPageTitleWrapper>.sapFDynamicPageTitle .sapFDynamicPageTitleActionsBar {padding-right: 0;}
.sapFDynamicPage-Std-Phone .sapFDynamicPageTitleWrapper>.sapFDynamicPageTitle .sapFDynamicPageTitleActionsBar > .sapMTB {padding-right: 0;}

/* LoginPrompt */
.exf-loginprompt-flexbox > div {max-width: 95%}
.sapMDialog .exf-loginprompt-flexbox > div {max-width: 100%; width: 100%}
.exf-loginprompt-panel > h2 {text-align: center; height: 4rem !important; line-height: 4rem !important; font-size: 1.2rem;}
.exf-loginprompt-panel > .sapMPanelContent {border-left: 1px solid #cccccc; border-right: 1px solid #cccccc;}

/* sap.m.P13nDialog */
.sapMP13nDialog > .sapMDialogResizeHandler {position: inherit}

/* Tiles */
.sapMTileCntContent .sapMFC.sapMTcInnerMarker {width: inherit !important;}
.sapMTileCntContent .sapMFCCTxt {overflow: visible !important;}
.sapMGT.exf-stretched .sapMTileCnt.sapMFrameTypeAuto {max-width: none;}
.sapMGT.exf-col-3 {width: calc(25% - 0.5rem)}
.sapMGT.exf-col-4 {width: calc(33% - 0.5rem)}
.sapMGT.exf-col-6 {width: calc(50% - 0.5rem)}
.sapMGT.exf-col-12 {width: 100%}
.sapMGT.OneByOne .sapMText .sapMTextMaxLine.sapMTextLineClamp {-webkit-line-clamp: 3 !important}
.exf-icon-tile .sapMGTContent {margin-top: -40px}
.exf-tiles > .sapMPanelContent {border-bottom: none;}
.exf-tile {hyphens: auto;}
.exf-tiles > h2, .exf-panel > h2 {margin-top: 1rem;}
.exf-tile > .sapMGTHdrContent.OneByOne > .sapMGTSubHdrTxt > .sapMText {white-space: normal;max-height: 3rem;  display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical;text-overflow: -o-ellipsis-lastline;}
/* Fix remove grayish background on busy-indicator in tile content */
.sapMTileCntContent > .sapMNC  > .sapUiLocalBusyIndicator {background-color: transparent;}
/* Fix to force 2-column tile menus even on phones with long narrow screens (centering on wider phones) */
html.sapUiMedia-Std-Phone .exf-tiles > .sapMPanelContent {padding-left: 0; padding-right: 0; margin-left: auto; margin-right: auto; width: 23.5rem; max-width: 100%} 
/* Panels */
.exf-panel > .sapMPanelContent {border-bottom: none;}

/* Forms */
.sapUiFormTitle:empty {display: none;}
.exf-formcontainer-invisible {padding: 0 !important}
.exf-panel.exf-form-mixed-width .sapUiRespGridMedia-Std-Tablet.sapUiRespGridHSpace0>.sapUiRespGridSpanM12 {padding: 0 0.75rem; box-sizing: border-box;}
.exf-panel.exf-form-mixed-width .sapUiRespGrid {padding-right: 0; padding-left: 0;}
.sapUiRespGrid > div > .sapMMsgStrip {margin: 0px !important;}

/* HTML widgets */
.exf-html {font-size: 0.875rem;}
.sapUiSimpleForm .exf-html h1 {font-size: 1.275rem; font-weight: normal;}
.sapUiSimpleForm .exf-html h2 {font-size: 1.175rem; font-weight: normal;}
/* ... */

